validation-jwt-localstorage

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 mongo_url = "mongodb+srv://subhankar1122:9748748923fT@cluster0.6htz6ph.mongodb.net/coworkers-booking-space"
+JWT_SECRET = "secret123"
